@startuml

package algo3 {

    package modelo {
        class Algothief
        interface FuenteDeDatos
        Algothief .> FuenteDeDatos
    }

    package controllers {
        class Controller
        class Juego
    }

    package perifericos {
        class LectorDeArchivos implements FuenteDeDatos
    }

    package vistas {
        class Vista
    }

    perifericos ..> modelo
    Juego ..> modelo
    vistas ..> controllers


    Juego o-- Algothief
    Juego ...> LectorDeArchivos
}

@enduml
